--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -5,7 +5,7 @@
 [PROJECTION]
 //在此处配置无线网络环境下的代理模式，参考如下配置。
 [DNS]
-system, 202.141.162.123
+system
 
 [REWRITE]
 ^https?://(www.)?g.cn url 302 https://www.google.com.tw
@@ -19,8 +19,10 @@ system, 202.141.162.123
 
 [TCP]
 //me
+HOST-KEYWORD,pixiv,PROXY
 PROCESS-NAME,Jietu,REJECT
 HOST-SUFFIX,v2ex.com,PROXY
+HOST-SUFFIX,maying.co,PROXY
 HOST-SUFFIX,appodeal.com,REJECT
 HOST-SUFFIX,applvn.com,REJECT
 HOST-SUFFIX,tlnk.io,REJECT
@@ -29,13 +31,13 @@ HOST,ios.rqd.qq.com,REJECT
 IP-CIDR,183.61.0.0/12,REJECT
 IP-CIDR,183.3.0.0/12,REJECT
 HOST-SUFFIX,mtvip.net,DIRECT
+HOST-SUFFIX,lxysh.co,DIRECT
 HOST-SUFFIX,bdstatic.com,REJECT
 HOST-SUFFIX,alexametrics.com,REJECT
 HOST-SUFFIX,ssr.ac,PROXY
 HOST-SUFFIX,cordcloud.me,PROXY
 HOST-SUFFIX,cloudfront.net,DIRECT
 HOST-SUFFIX,pthome.net,DIRECT
-HOST-KEYWORD,github,PROXY
 IP-CIDR,120.92.33.171/32,REJECT
 HOST,ad-stat.ksosoft.com,REJECT
 HOST,img.auction-ads.wpscdn.cn,REJECT
@@ -54,21 +56,12 @@ HOST,union.uc.cn,REJECT
 HOST-SUFFIX,1password.com,PROXY
 
 //Apple
-DOMAIN,appleiphonecell.com,选择Apple的策略，不懂就选择DIRECT
-USER-AGENT,AppStore*,选择Apple的策略，不懂就选择DIRECT
-USER-AGENT,com.apple.appstored*,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-KEYWORD,itunes,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,aaplimg.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,apple.co,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,apple.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,appsto.re,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,cdn-apple.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,me.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,mzstatic.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,itunes.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,itunes-apple.com.akadns.net,选择Apple的策略，不懂就选择DIRECT
-
-//定位相关
+USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
+USER-AGENT,*WeatherFoundation*,DIRECT
+USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
+USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
+USER-AGENT,AppStore*,DIRECT
+USER-AGENT,com.apple.appstored*,DIRECT
 USER-AGENT,com.apple.geod*,DIRECT
 USER-AGENT,com.apple.Maps,DIRECT
 USER-AGENT,FindMyFriends*,DIRECT
@@ -76,9 +69,18 @@ USER-AGENT,FindMyiPhone*,DIRECT
 USER-AGENT,FMDClient*,DIRECT
 USER-AGENT,FMFD*,DIRECT
 USER-AGENT,fmflocatord*,DIRECT
-USER-AGENT,geod*,DIRECT
+USER-AGENT,geod*,DIRECT,DIRECT
 USER-AGENT,locationd*,DIRECT
 USER-AGENT,Maps*,DIRECT
+USER-AGENT,TestFlight*,DIRECT
+DOMAIN-SUFFIX,apple.com,DIRECT
+DOMAIN-SUFFIX,icloud.com,DIRECT
+DOMAIN-SUFFIX,itunes.com,DIRECT
+DOMAIN-SUFFIX,me.com,DIRECT
+DOMAIN-SUFFIX,mzstatic.com,DIRECT
+DOMAIN,api.smoot.apple.cn,DIRECT
+PROCESS-NAME,trustd,DIRECT
+
 //支付相关
 USER-AGENT,*Passbook*,DIRECT
 USER-AGENT,passd*,DIRECT
@@ -90,24 +92,7 @@ USER-AGENT,*AssistantServices*,DIRECT
 USER-AGENT,MobileAsset*,DIRECT
 USER-AGENT,Siri*,DIRECT
 USER-AGENT,*siri*,DIRECT
-
 IP-CIDR,17.0.0.0/8,DIRECT
-DOMAIN-SUFFIX,icloud.com,DIRECT
-DOMAIN-SUFFIX,icloud-content.com,DIRECT
-USER-AGENT,cloudd*,DIRECT
-DOMAIN-KEYWORD,icloud,DIRECT
-
-DOMAIN,api.smoot.apple.com.cn,DIRECT
-DOMAIN,captive.apple.com,DIRECT
-DOMAIN,cn-smp-paymentservices.apple.com,DIRECT
-DOMAIN,smp-device.apple.com,DIRECT
-DOMAIN,smp-device-content.apple.com,DIRECT
-DOMAIN,sp.itunes.apple.com,DIRECT
-DOMAIN-SUFFIX,ess.apple.com,DIRECT
-DOMAIN-SUFFIX,push.apple.com,DIRECT
-DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
-DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
-DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
 DOMAIN,aoscdn.amap.com,REJECT
 DOMAIN,page.amap.com,REJECT
@@ -381,35 +366,17 @@ DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
 DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
 
 // Microsoft
-USER-AGENT,Microsoft*,选择微软服务的策略，不懂就选择DIRECT
-USER-AGENT,OneDrive*,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-KEYWORD,microsoft,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,bing.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,bing.net,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,cloudappsecurity.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,docs.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,hotmail.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,live.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,live.net,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,microsoft.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,msedge.net,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,msn.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,office.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,office.net,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,office365.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,onedrive.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,onenote.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,onenote.net,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,onmicrosoft.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,outlook.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,outlookgroups.ms,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,visualstudio.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,windows.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,windows.net,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,windowsupdate.com,选择微软服务的策略，不懂就选择DIRECT
-
-PROCESS-NAME,Telegram,PROXY
-USER-AGENT,*Telegram*,PROXY
+USER-AGENT,OneDrive*,PROXY
+DOMAIN-KEYWORD,microsoft,PROXY
+DOMAIN-SUFFIX,hotmail.com,PROXY
+DOMAIN-SUFFIX,live.com,PROXY
+DOMAIN-SUFFIX,live.net,PROXY
+DOMAIN-SUFFIX,msn.com,PROXY
+DOMAIN-SUFFIX,office.com,PROXY
+DOMAIN-SUFFIX,office.net,PROXY
+DOMAIN-SUFFIX,outlook.com,PROXY
+PROCESS-NAME,Telegram,PROXY,PROXY
+USER-AGENT,*Telegram*,PROXY,PROXY
 
 DOMAIN-SUFFIX,goo.gl,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gvt1.com,PROXY,force-remote-dns
@@ -561,7 +528,6 @@ HOST-SUFFIX,whatbrowser.org,PROXY
 HOST-SUFFIX,widevine.com,PROXY
 HOST-SUFFIX,x.company,PROXY
 HOST-SUFFIX,xn—ngstr-lra8j.com,PROXY
-
 HOST-SUFFIX,fb.com,PROXY,force-remote-dns
 
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
@@ -575,8 +541,16 @@ IP-CIDR6,2001:67c:4e8::/48,PROXY,no-resolve
 IP-CIDR6,2001:b28:f23d::/48,PROXY,no-resolve
 IP-CIDR6,2001:b28:f23f::/48,PROXY,no-resolve
 
-USER-AGENT,MicroMessenger Client,DIRECT
+// UA
+USER-AGENT,hide*,DIRECT
+USER-AGENT,MicroMessenger*,DIRECT
+USER-AGENT,PayPal*,DIRECT
+USER-AGENT,TeamViewer*,DIRECT
+USER-AGENT,TIM*,DIRECT
+USER-AGENT,ting_en,DIRECT
+USER-AGENT,WebTorrent*,DIRECT
 USER-AGENT,WeChat*,DIRECT
+
 HOST,blzddist1-a.akamaihd.net,DIRECT
 HOST-SUFFIX,steampowered.com,DIRECT
 HOST-SUFFIX,steam-chat.com,DIRECT
@@ -602,250 +576,20 @@ HOST-SUFFIX,maoyun.tv,DIRECT
 HOST-SUFFIX,teamviewer.com,DIRECT
 USER-AGENT, %E4%BA%AC%E4%B8%9C%E5%88%B0%E5%AE%B6*,DIRECT
 USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
-HOST-SUFFIX,local,DIRECT
-IP-CIDR,134.175.0.0/16,DIRECT
-IP-CIDR,192.168.0.0/16,DIRECT
+
+IP-CIDR,1.255.62.0/24,DIRECT,no-resolve
+
+DOMAIN-SUFFIX,local,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
-IP-CIDR,172.16.0.0/12,DIRECT
-IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
+IP-CIDR,127.0.0.0/8,DIRECT
+IP-CIDR,172.16.0.0/12,DIRECT
+IP-CIDR,192.168.0.0/16,DIRECT
+
+GEOIP,CN,DIRECT
+
 # Domestic
 DOMAIN-SUFFIX,cn,DIRECT
-
-DOMAIN-SUFFIX,12306.cn,DIRECT
-DOMAIN-SUFFIX,12306.com,DIRECT
-DOMAIN-SUFFIX,126.net,DIRECT
-DOMAIN-SUFFIX,163.com,DIRECT
-DOMAIN-SUFFIX,360.cn,DIRECT
-DOMAIN-SUFFIX,360.com,DIRECT
-DOMAIN-SUFFIX,360buy.com,DIRECT
-DOMAIN-SUFFIX,360buyimg.com,DIRECT
-DOMAIN-SUFFIX,36kr.com,DIRECT
-DOMAIN-SUFFIX,51ym.me,DIRECT
-DOMAIN-SUFFIX,58.com,DIRECT
-DOMAIN-SUFFIX,8686c.com,DIRECT
-DOMAIN-SUFFIX,abercrombie.com,DIRECT
-DOMAIN-SUFFIX,acfun.tv,DIRECT
-DOMAIN-SUFFIX,adobesc.com,DIRECT
-DOMAIN-SUFFIX,air-matters.com,DIRECT
-DOMAIN-SUFFIX,air-matters.io,DIRECT
-DOMAIN-SUFFIX,airtable.com,DIRECT
-DOMAIN-SUFFIX,aixifan.com,DIRECT
-DOMAIN-SUFFIX,akadns.net,DIRECT
-DOMAIN-SUFFIX,alicdn.com,DIRECT
-DOMAIN-SUFFIX,alipay.com,DIRECT
-DOMAIN-SUFFIX,alipayobjects.com,DIRECT
-DOMAIN-SUFFIX,aliyun.com,DIRECT
-DOMAIN-SUFFIX,amap.com,DIRECT
-DOMAIN-SUFFIX,apache.org,DIRECT
-DOMAIN-SUFFIX,api.crisp.chat,DIRECT
-DOMAIN-SUFFIX,api.termius.com,DIRECT
-DOMAIN-SUFFIX,appshike.com,DIRECT
-DOMAIN-SUFFIX,appstore.com,DIRECT
-DOMAIN-SUFFIX,autonavi.com,DIRECT
-DOMAIN-SUFFIX,aweme.snssdk.com,DIRECT
-DOMAIN-SUFFIX,bababian.com,DIRECT
-DOMAIN-SUFFIX,baidu.com,DIRECT
-DOMAIN-SUFFIX,battle.net,DIRECT
-DOMAIN-SUFFIX,bdimg.com,DIRECT
-DOMAIN-SUFFIX,bdstatic.com,DIRECT
-DOMAIN-SUFFIX,beatsbydre.com,DIRECT
-DOMAIN-SUFFIX,bet365.com,DIRECT
-DOMAIN-SUFFIX,caiyunapp.com,DIRECT
-DOMAIN-SUFFIX,ccgslb.com,DIRECT
-DOMAIN-SUFFIX,ccgslb.net,DIRECT
-DOMAIN-SUFFIX,chinacache.net,DIRECT
-DOMAIN-SUFFIX,chunbo.com,DIRECT
-DOMAIN-SUFFIX,chunboimg.com,DIRECT
-DOMAIN-SUFFIX,clashroyaleapp.com,DIRECT
-DOMAIN-SUFFIX,clouddn.com,DIRECT
-DOMAIN-SUFFIX,cloudsigma.com,DIRECT
-DOMAIN-SUFFIX,cloudxns.net,DIRECT
-DOMAIN-SUFFIX,cmfu.com,DIRECT
-DOMAIN-SUFFIX,cnbeta.com,DIRECT
-DOMAIN-SUFFIX,cnbetacdn.com,DIRECT
-DOMAIN-SUFFIX,culturedcode.com,DIRECT
-DOMAIN-SUFFIX,dct-cloud.com,DIRECT
-DOMAIN-SUFFIX,didialift.com,DIRECT
-DOMAIN-SUFFIX,douban.com,DIRECT
-DOMAIN-SUFFIX,doubanio.com,DIRECT
-DOMAIN-SUFFIX,douyu.com,DIRECT
-DOMAIN-SUFFIX,douyu.tv,DIRECT
-DOMAIN-SUFFIX,douyutv.com,DIRECT
-DOMAIN-SUFFIX,duokan.com,DIRECT
-DOMAIN-SUFFIX,duoshuo.com,DIRECT
-DOMAIN-SUFFIX,dytt8.net,DIRECT
-DOMAIN-SUFFIX,easou.com,DIRECT
-DOMAIN-SUFFIX,ecitic.com,DIRECT
-DOMAIN-SUFFIX,ecitic.net,DIRECT
-DOMAIN-SUFFIX,eclipse.org,DIRECT
-DOMAIN-SUFFIX,eudic.net,DIRECT
-DOMAIN-SUFFIX,ewqcxz.com,DIRECT
-DOMAIN-SUFFIX,feng.com,DIRECT
-DOMAIN-SUFFIX,fir.im,DIRECT
-DOMAIN-SUFFIX,frdic.com,DIRECT
-DOMAIN-SUFFIX,fresh-ideas.cc,DIRECT
-DOMAIN-SUFFIX,geetest.com,DIRECT
-DOMAIN-SUFFIX,godic.net,DIRECT
-DOMAIN-SUFFIX,goodread.com,DIRECT
-DOMAIN-SUFFIX,google.cn,DIRECT
-DOMAIN-SUFFIX,gtimg.com,DIRECT
-DOMAIN-SUFFIX,haibian.com,DIRECT
-DOMAIN-SUFFIX,hao123.com,DIRECT
-DOMAIN-SUFFIX,haosou.com,DIRECT
-DOMAIN-SUFFIX,hollisterco.com,DIRECT
-DOMAIN-SUFFIX,hongxiu.com,DIRECT
-DOMAIN-SUFFIX,hxcdn.net,DIRECT
-DOMAIN-SUFFIX,iciba.com,DIRECT
-DOMAIN-SUFFIX,ifeng.com,DIRECT
-DOMAIN-SUFFIX,ifengimg.com,DIRECT
-DOMAIN-SUFFIX,images.unsplash.com,DIRECT
-DOMAIN-SUFFIX,images-amazon.com,DIRECT
-DOMAIN-SUFFIX,img4me.com,DIRECT
-DOMAIN-SUFFIX,ipify.org,DIRECT
-DOMAIN-SUFFIX,ipip.net,DIRECT
-DOMAIN-SUFFIX,ithome.com,DIRECT
-DOMAIN-SUFFIX,ixdzs.com,DIRECT
-DOMAIN-SUFFIX,jd.com,DIRECT
-DOMAIN-SUFFIX,jd.hk,DIRECT
-DOMAIN-SUFFIX,jianshu.com,DIRECT
-DOMAIN-SUFFIX,jianshu.io,DIRECT
-DOMAIN-SUFFIX,jianshuapi.com,DIRECT
-DOMAIN-SUFFIX,jiathis.com,DIRECT
-DOMAIN-SUFFIX,jomodns.com,DIRECT
-DOMAIN-SUFFIX,jsboxbbs.com,DIRECT
-DOMAIN-SUFFIX,knewone.com,DIRECT
-DOMAIN-SUFFIX,kuaidi100.com,DIRECT
-DOMAIN-SUFFIX,lecloud.com,DIRECT
-DOMAIN-SUFFIX,lemicp.com,DIRECT
-DOMAIN-SUFFIX,letv.com,DIRECT
-DOMAIN-SUFFIX,letvcloud.com,DIRECT
-DOMAIN-SUFFIX,lizhi.io,DIRECT
-DOMAIN-SUFFIX,localizecdn.com,DIRECT
-DOMAIN-SUFFIX,lucifr.com,DIRECT
-DOMAIN-SUFFIX,luoo.net,DIRECT
-DOMAIN-SUFFIX,lxdns.com,DIRECT
-DOMAIN-SUFFIX,mai.tn,DIRECT
-DOMAIN-SUFFIX,meizu.com,DIRECT
-DOMAIN-SUFFIX,mi.com,DIRECT
-DOMAIN-SUFFIX,miaopai.com,DIRECT
-DOMAIN-SUFFIX,miui.com,DIRECT
-DOMAIN-SUFFIX,miwifi.com,DIRECT
-DOMAIN-SUFFIX,mob.com,DIRECT
-DOMAIN-SUFFIX,moji.com,DIRECT
-DOMAIN-SUFFIX,moke.com,DIRECT
-DOMAIN-SUFFIX,mtalk.google.com,DIRECT
-DOMAIN-SUFFIX,mxhichina.com,DIRECT
-DOMAIN-SUFFIX,myqcloud.com,DIRECT
-DOMAIN-SUFFIX,myunlu.com,DIRECT
-DOMAIN-SUFFIX,ngabbs.com,DIRECT
-DOMAIN-SUFFIX,netease.com,DIRECT
-DOMAIN-SUFFIX,nfoservers.com,DIRECT
-DOMAIN-SUFFIX,nssurge.com,DIRECT
-DOMAIN-SUFFIX,nuomi.com,DIRECT
-DOMAIN-SUFFIX,ourdvs.com,DIRECT
-DOMAIN-SUFFIX,overcast.fm,DIRECT
-DOMAIN-SUFFIX,paypal.com,DIRECT
-DOMAIN-SUFFIX,paypalobjects.com,DIRECT
-DOMAIN-SUFFIX,pgyer.com,DIRECT
-DOMAIN-SUFFIX,pniao.com,DIRECT
-DOMAIN-SUFFIX,pstatp.com,DIRECT
-DOMAIN-SUFFIX,qbox.me,DIRECT
-DOMAIN-SUFFIX,qcloud.com,DIRECT
-DOMAIN-SUFFIX,qdaily.com,DIRECT
-DOMAIN-SUFFIX,qdmm.com,DIRECT
-DOMAIN-SUFFIX,qhimg.com,DIRECT
-DOMAIN-SUFFIX,qidian.com,DIRECT
-DOMAIN-SUFFIX,qihucdn.com,DIRECT
-DOMAIN-SUFFIX,qin.io,DIRECT
-DOMAIN-SUFFIX,qingmang.me,DIRECT
-DOMAIN-SUFFIX,qingmang.mobi,DIRECT
-DOMAIN-SUFFIX,qiniucdn.com,DIRECT
-DOMAIN-SUFFIX,qiniudn.com,DIRECT
-DOMAIN-SUFFIX,qq.com,DIRECT
-DOMAIN-SUFFIX,qqurl.com,DIRECT
-DOMAIN-SUFFIX,rarbg.to,DIRECT
-DOMAIN-SUFFIX,rrmj.tv,DIRECT
-DOMAIN-SUFFIX,ruguoapp.com,DIRECT
-DOMAIN-SUFFIX,sandai.net,DIRECT
-DOMAIN-SUFFIX,sf-express.com,DIRECT
-DOMAIN-SUFFIX,sinaapp.com,DIRECT
-DOMAIN-SUFFIX,sinaimg.cn,DIRECT
-DOMAIN-SUFFIX,sinaimg.com,DIRECT
-DOMAIN-SUFFIX,sm.ms,DIRECT
-DOMAIN-SUFFIX,smzdm.com,DIRECT
-DOMAIN-SUFFIX,snssdk.com,DIRECT
-DOMAIN-SUFFIX,snwx.com,DIRECT
-DOMAIN-SUFFIX,so.com,DIRECT
-DOMAIN-SUFFIX,sogou.com,DIRECT
-DOMAIN-SUFFIX,sogoucdn.com,DIRECT
-DOMAIN-SUFFIX,sohu.com,DIRECT
-DOMAIN-SUFFIX,soku.com,DIRECT
-DOMAIN-SUFFIX,soso.com,DIRECT
-DOMAIN-SUFFIX,speedtest.net,DIRECT
-DOMAIN-SUFFIX,sspai.com,DIRECT
-DOMAIN-SUFFIX,startssl.com,DIRECT
-DOMAIN-SUFFIX,store.steampowered.com,DIRECT
-DOMAIN-SUFFIX,suning.com,DIRECT
-DOMAIN-SUFFIX,symcd.com,DIRECT
-DOMAIN-SUFFIX,taobao.com,DIRECT
-DOMAIN-SUFFIX,teamviewer.com,DIRECT
-DOMAIN-SUFFIX,tenpay.com,DIRECT
-DOMAIN-SUFFIX,tietuku.com,DIRECT
-DOMAIN-SUFFIX,tmall.com,DIRECT
-DOMAIN-SUFFIX,tmzvps.com,DIRECT
-DOMAIN-SUFFIX,trello.com,DIRECT
-DOMAIN-SUFFIX,trellocdn.com,DIRECT
-DOMAIN-SUFFIX,ttmeiju.com,DIRECT
-DOMAIN-SUFFIX,tudou.com,DIRECT
-DOMAIN-SUFFIX,udache.com,DIRECT
-DOMAIN-SUFFIX,umengcloud.com,DIRECT
-DOMAIN-SUFFIX,upaiyun.com,DIRECT
-DOMAIN-SUFFIX,upyun.com,DIRECT
-DOMAIN-SUFFIX,uxengine.net,DIRECT
-DOMAIN-SUFFIX,wandoujia.com,DIRECT
-DOMAIN-SUFFIX,weather.bjango.com,DIRECT
-DOMAIN-SUFFIX,weather.com,DIRECT
-DOMAIN-SUFFIX,webqxs.com,DIRECT
-DOMAIN-SUFFIX,weibo.cn,DIRECT
-DOMAIN-SUFFIX,weibo.com,DIRECT
-DOMAIN-SUFFIX,weico.cc,DIRECT
-DOMAIN-SUFFIX,weiphone.com,DIRECT
-DOMAIN-SUFFIX,weiphone.net,DIRECT
-DOMAIN-SUFFIX,wenku8.net,DIRECT
-DOMAIN-SUFFIX,werewolf.53site.com,DIRECT
-DOMAIN-SUFFIX,windowsupdate.com,DIRECT
-DOMAIN-SUFFIX,wkcdn.com,DIRECT
-DOMAIN-SUFFIX,workflowy.com,DIRECT
-DOMAIN-SUFFIX,xdrig.com,DIRECT
-DOMAIN-SUFFIX,xhostfire.com,DIRECT
-DOMAIN-SUFFIX,xiami.com,DIRECT
-DOMAIN-SUFFIX,xiami.net,DIRECT
-DOMAIN-SUFFIX,xiaojukeji.com,DIRECT
-DOMAIN-SUFFIX,xiaomi.com,DIRECT
-DOMAIN-SUFFIX,xiaomi.net,DIRECT
-DOMAIN-SUFFIX,xiaomicp.com,DIRECT
-DOMAIN-SUFFIX,ximalaya.com,DIRECT
-DOMAIN-SUFFIX,xitek.com,DIRECT
-DOMAIN-SUFFIX,xmcdn.com,DIRECT
-DOMAIN-SUFFIX,xslb.net,DIRECT
-DOMAIN-SUFFIX,xteko.com,DIRECT
-DOMAIN-SUFFIX,xunlei.com,DIRECT
-DOMAIN-SUFFIX,yach.me,DIRECT
-DOMAIN-SUFFIX,yeepay.com,DIRECT
-DOMAIN-SUFFIX,yhd.com,DIRECT
-DOMAIN-SUFFIX,yinxiang.com,DIRECT
-DOMAIN-SUFFIX,yixia.com,DIRECT
-DOMAIN-SUFFIX,ykimg.com,DIRECT
-DOMAIN-SUFFIX,youdao.com,DIRECT
-DOMAIN-SUFFIX,youku.com,DIRECT
-DOMAIN-SUFFIX,yunjiasu-cdn.net,DIRECT
-DOMAIN-SUFFIX,zealer.com,DIRECT
-DOMAIN-SUFFIX,zgslb.net,DIRECT
-DOMAIN-SUFFIX,zhihu.com,DIRECT
-DOMAIN-SUFFIX,zhimg.com,DIRECT
-DOMAIN-SUFFIX,zimuzu.tv,DIRECT
-DOMAIN-SUFFIX,zmz002.com,DIRECT
 
 // Accelerate direct sites,DIRECT
 DOMAIN-KEYWORD,torrent,DIRECT
