--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -8,10 +8,19 @@ bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,1
 
 [Rule]
 //me
-DOMAIN-SUFFIX,pixhost.to,DIRECT
-DOMAIN-SUFFIX,loli.net,DIRECT
-PROCESS-NAME,Jietu,REJECT
+[TCP]
+DOMAIN-SUFFIX,mazu.m.qq.com,DIRECT
+DOMAIN-SUFFIX,amazonaws.com,PROXY
+USER-AGENT,cloudd*,DIRECT
+DOMAIN-SUFFIX,onedrive.com,PROXY
+DOMAIN-SUFFIX,1drv.com,PROXY
+DOMAIN-SUFFIX,54sadsad.com,PROXY
+DOMAIN-KEYWORD,outlook,PROXY
+USER-AGENT,Brawl%20Stars*,DIRECT
+DOMAIN-SUFFIX,mazu.m.qq.com,DIRECT
+DOMAIN-KEYWORD,pixiv,PROXY
 DOMAIN-SUFFIX,v2ex.com,PROXY
+DOMAIN-SUFFIX,maying.co,PROXY
 DOMAIN-SUFFIX,appodeal.com,REJECT
 DOMAIN-SUFFIX,applvn.com,REJECT
 DOMAIN-SUFFIX,tlnk.io,REJECT
@@ -20,16 +29,15 @@ DOMAIN,ios.rqd.qq.com,REJECT
 IP-CIDR,183.61.0.0/12,REJECT
 IP-CIDR,183.3.0.0/12,REJECT
 DOMAIN-SUFFIX,mtvip.net,DIRECT
+DOMAIN-SUFFIX,lxysh.co,DIRECT
 DOMAIN-SUFFIX,bdstatic.com,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
-DOMAIN-SUFFIX,ssr.ac,PROXY
+DOMAIN-SUFFIX,ssr.sh,PROXY
 DOMAIN-SUFFIX,cordcloud.me,PROXY
 DOMAIN-SUFFIX,cloudfront.net,DIRECT
 DOMAIN-SUFFIX,pthome.net,DIRECT
-DOMAIN-KEYWORD,github,PROXY
 IP-CIDR,120.92.33.171/32,REJECT
 DOMAIN,ad-stat.ksosoft.com,REJECT
-DOMAIN,img.auction-ads.wpscdn.cn,REJECT
 DOMAIN-SUFFIX,wps.cn,REJECT
 DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
 DOMAIN-SUFFIX,ksosoft.com,REJECT
@@ -43,23 +51,12 @@ DOMAIN-SUFFIX,crashlytics.com,DIRECT
 DOMAIN-SUFFIX,applovin.com,REJECT
 DOMAIN,union.uc.cn,REJECT
 DOMAIN-SUFFIX,1password.com,PROXY
-
-//Apple
-DOMAIN,appleiphonecell.com,PROXY
-USER-AGENT,AppStore*,PROXY
-USER-AGENT,com.apple.appstored*,PROXY
-DOMAIN-KEYWORD,itunes,PROXY
-DOMAIN-SUFFIX,aaplimg.com,PROXY
-DOMAIN-SUFFIX,apple.co,PROXY
-DOMAIN-SUFFIX,apple.com,PROXY
-DOMAIN-SUFFIX,appsto.re,PROXY
-DOMAIN-SUFFIX,cdn-apple.com,PROXY
-DOMAIN-SUFFIX,me.com,PROXY
-DOMAIN-SUFFIX,mzstatic.com,PROXY
-DOMAIN-SUFFIX,itunes.com,PROXY
-DOMAIN-SUFFIX,itunes-apple.com.akadns.net,PROXY
-
-//定位相关
+USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
+USER-AGENT,*WeatherFoundation*,DIRECT
+USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
+USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
+USER-AGENT,AppStore*,DIRECT
+USER-AGENT,com.apple.appstored*,DIRECT
 USER-AGENT,com.apple.geod*,DIRECT
 USER-AGENT,com.apple.Maps,DIRECT
 USER-AGENT,FindMyFriends*,DIRECT
@@ -70,36 +67,22 @@ USER-AGENT,fmflocatord*,DIRECT
 USER-AGENT,geod*,DIRECT
 USER-AGENT,locationd*,DIRECT
 USER-AGENT,Maps*,DIRECT
-//支付相关
+USER-AGENT,TestFlight*,DIRECT
+DOMAIN-SUFFIX,apple.com,DIRECT
+DOMAIN-SUFFIX,icloud.com,DIRECT
+DOMAIN-SUFFIX,itunes.com,DIRECT
+DOMAIN-SUFFIX,me.com,DIRECT
+DOMAIN-SUFFIX,mzstatic.com,DIRECT
+DOMAIN,api.smoot.apple.cn,DIRECT
 USER-AGENT,*Passbook*,DIRECT
 USER-AGENT,passd*,DIRECT
 USER-AGENT,seld*,DIRECT
 USER-AGENT,trustd*,DIRECT
 USER-AGENT,Wallet/1.0*,DIRECT
-//Siri
 USER-AGENT,*AssistantServices*,DIRECT
 USER-AGENT,MobileAsset*,DIRECT
 USER-AGENT,Siri*,DIRECT
 USER-AGENT,*siri*,DIRECT
-
-IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
-DOMAIN-SUFFIX,icloud.com,DIRECT
-DOMAIN-SUFFIX,icloud-content.com,DIRECT
-USER-AGENT,cloudd*,DIRECT
-DOMAIN-KEYWORD,icloud,DIRECT
-
-DOMAIN,api.smoot.apple.com.cn,DIRECT
-DOMAIN,captive.apple.com,DIRECT
-DOMAIN,cn-smp-paymentservices.apple.com,DIRECT
-DOMAIN,smp-device.apple.com,DIRECT
-DOMAIN,smp-device-content.apple.com,DIRECT
-DOMAIN,sp.itunes.apple.com,DIRECT
-DOMAIN-SUFFIX,ess.apple.com,DIRECT
-DOMAIN-SUFFIX,push.apple.com,DIRECT
-DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
-DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
-DOMAIN-SUFFIX,ls.apple.com,DIRECT
-
 DOMAIN,aoscdn.amap.com,REJECT
 DOMAIN,page.amap.com,REJECT
 DOMAIN,sync.amap.com,REJECT
@@ -107,8 +90,7 @@ DOMAIN,mps.amap.com,REJECT
 DOMAIN,aos-cdn-image.amap.com,REJECT
 DOMAIN,wb.amap.com,REJECT
 DOMAIN,f.amap.com,REJECT
-
-DOMAIN-KEYWORD,adservice,REJECT
+DOMAIN-KEYWORD,ads,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-SUFFIX,3lift.com,REJECT
 DOMAIN-SUFFIX,51.la,REJECT
@@ -124,10 +106,6 @@ DOMAIN-SUFFIX,admarvel.com,REJECT
 DOMAIN-SUFFIX,admaster.com.cn,REJECT
 DOMAIN-SUFFIX,admob.com,REJECT
 DOMAIN-SUFFIX,adnxs.com,REJECT
-DOMAIN-SUFFIX,adsafeprotected.com,REJECT
-DOMAIN-SUFFIX,adsrvr.org,REJECT
-DOMAIN-SUFFIX,ads-twitter.com,REJECT
-DOMAIN-SUFFIX,adsymptotic.com,REJECT
 DOMAIN-SUFFIX,adtechus.com,REJECT
 DOMAIN-SUFFIX,adtilt.com,REJECT
 DOMAIN-SUFFIX,advertising.com,REJECT
@@ -137,7 +115,6 @@ DOMAIN-SUFFIX,adxvip.com,REJECT
 DOMAIN-SUFFIX,aerserv.com,REJECT
 DOMAIN-SUFFIX,agkn.com,REJECT
 DOMAIN-SUFFIX,alipaylog.com,REJECT
-DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 DOMAIN-SUFFIX,analysys.cn,REJECT
 DOMAIN-SUFFIX,app-adforce.jp,REJECT
 DOMAIN-SUFFIX,appboy.com,REJECT
@@ -176,7 +153,6 @@ DOMAIN-SUFFIX,go-mpulse.net,REJECT
 DOMAIN-SUFFIX,gowadogo.com,REJECT
 DOMAIN-SUFFIX,growingio.com,REJECT
 DOMAIN-SUFFIX,i2000.xyz,REJECT
-DOMAIN-SUFFIX,iadsdk.apple.com,REJECT
 DOMAIN-SUFFIX,igexin.com,REJECT
 DOMAIN-SUFFIX,imrworldwide.com,REJECT
 DOMAIN-SUFFIX,indexww.com,REJECT
@@ -184,7 +160,6 @@ DOMAIN-SUFFIX,inmobi.cn,REJECT
 DOMAIN-SUFFIX,inmobi.com,REJECT
 DOMAIN-SUFFIX,instabug.com,REJECT
 DOMAIN-SUFFIX,irs01.com,REJECT
-DOMAIN-SUFFIX,juicyads.com,REJECT
 DOMAIN-SUFFIX,kejet.net,REJECT
 DOMAIN-SUFFIX,knlob.com,REJECT
 DOMAIN-SUFFIX,kochava.com,REJECT
@@ -195,12 +170,9 @@ DOMAIN-SUFFIX,leanplum.com,REJECT
 DOMAIN-SUFFIX,lenzmx.com,REJECT
 DOMAIN-SUFFIX,lnk0.com,REJECT
 DOMAIN-SUFFIX,luomi.com,REJECT
-DOMAIN-SUFFIX,madserving.com,REJECT
 DOMAIN-SUFFIX,mathtag.com,REJECT
 DOMAIN-SUFFIX,metalex.io,REJECT
-DOMAIN-SUFFIX,mfadsrvr.com,REJECT
 DOMAIN-SUFFIX,miaozhen.com,REJECT
-DOMAIN-SUFFIX,moatads.com,REJECT
 DOMAIN-SUFFIX,mobileapptracking.com,REJECT
 DOMAIN-SUFFIX,mobiw.com,REJECT
 DOMAIN-SUFFIX,mopub.com,REJECT
@@ -233,7 +205,6 @@ DOMAIN-SUFFIX,sonobi.com,REJECT
 DOMAIN-SUFFIX,starmobs.com,REJECT
 DOMAIN-SUFFIX,storygize.net,REJECT
 DOMAIN-SUFFIX,summerhamster.com,REJECT
-DOMAIN-SUFFIX,supersonicads.com,REJECT
 DOMAIN-SUFFIX,taboola.com,REJECT
 DOMAIN-SUFFIX,talkingdata.com,REJECT
 DOMAIN-SUFFIX,tango-deg.com,REJECT
@@ -247,7 +218,6 @@ DOMAIN-SUFFIX,trafficjunky.net,REJECT
 DOMAIN-SUFFIX,trustx.org,REJECT
 DOMAIN-SUFFIX,tuanxue360.net,REJECT
 DOMAIN-SUFFIX,turn.com,REJECT
-DOMAIN-SUFFIX,uberads.com,REJECT
 DOMAIN-SUFFIX,udrig.com,REJECT
 DOMAIN-SUFFIX,umeng.co,REJECT
 DOMAIN-SUFFIX,umeng.com,REJECT
@@ -255,7 +225,6 @@ DOMAIN-SUFFIX,umengcloud.com,REJECT
 DOMAIN-SUFFIX,upcpi.com,REJECT
 DOMAIN-SUFFIX,urbanairship.com,REJECT
 DOMAIN-SUFFIX,usebutton.com,REJECT
-DOMAIN-SUFFIX,voiceads.cn,REJECT
 DOMAIN-SUFFIX,vrtcal.com,REJECT
 DOMAIN-SUFFIX,webspectator.com,REJECT
 DOMAIN-SUFFIX,xadchina.cn,REJECT
@@ -266,7 +235,6 @@ DOMAIN-SUFFIX,appnext.com,REJECT
 DOMAIN-SUFFIX,ad.daum.net,REJECT
 DOMAIN-SUFFIX,api.appsee.com,REJECT
 DOMAIN-SUFFIX,ssl2.duapps.com,REJECT
-DOMAIN-SUFFIX,unityads.unity3d.com,REJECT
 DOMAIN,log.umsns.com,REJECT
 DOMAIN,log.snssdk.com,REJECT
 DOMAIN,wgo.mmstat.com,REJECT
@@ -295,16 +263,12 @@ DOMAIN,track.tiara.kakao.com,REJECT
 DOMAIN,trackapp.guahao.cn,REJECT
 DOMAIN,traffic.mogujie.com,REJECT
 DOMAIN-SUFFIX,doubleclick.net,REJECT
-DOMAIN-SUFFIX,googleadservices.com,REJECT
-DOMAIN-SUFFIX,googleadsserving.cn,REJECT
 DOMAIN-SUFFIX,googlesyndication.com,REJECT
 DOMAIN-SUFFIX,googletagmanager.com,REJECT
 DOMAIN-SUFFIX,baidustatic.com,REJECT
 DOMAIN,duclick.baidu.com,REJECT
 DOMAIN,hm.baidu.com,REJECT
 DOMAIN,hmma.baidu.com,REJECT
-DOMAIN,mobads.baidu.com,REJECT
-DOMAIN,mobads-logs.baidu.com,REJECT
 DOMAIN,wn.pos.baidu.com,REJECT
 DOMAIN,acs4baichuan.m.taobao.com,REJECT
 DOMAIN,adash.m.taobao.com,REJECT
@@ -361,47 +325,22 @@ IP-CIDR,101.227.97.240/32,REJECT,no-resolve
 IP-CIDR,101.227.200.11/32,REJECT,no-resolve
 IP-CIDR,101.227.200.28/32,REJECT,no-resolve
 IP-CIDR,124.192.153.42/32,REJECT,no-resolve
-DOMAIN-SUFFIX,ads.sohu.com,REJECT
 DOMAIN-SUFFIX,aty.sohu.com,REJECT
 DOMAIN,imp.optaim.com,REJECT
 DOMAIN,v2.reachmax.cn,REJECT
 DOMAIN,track.sohu.com,REJECT
-
-//Google
 DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
 DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
-
-// Microsoft
-USER-AGENT,Microsoft*,PROXY
 USER-AGENT,OneDrive*,PROXY
 DOMAIN-KEYWORD,microsoft,PROXY
-DOMAIN-SUFFIX,bing.com,PROXY
-DOMAIN-SUFFIX,bing.net,PROXY
-DOMAIN-SUFFIX,cloudappsecurity.com,PROXY
-DOMAIN-SUFFIX,docs.com,PROXY
 DOMAIN-SUFFIX,hotmail.com,PROXY
 DOMAIN-SUFFIX,live.com,PROXY
 DOMAIN-SUFFIX,live.net,PROXY
-DOMAIN-SUFFIX,microsoft.com,PROXY
-DOMAIN-SUFFIX,msedge.net,PROXY
 DOMAIN-SUFFIX,msn.com,PROXY
 DOMAIN-SUFFIX,office.com,PROXY
 DOMAIN-SUFFIX,office.net,PROXY
-DOMAIN-SUFFIX,office365.com,PROXY
-DOMAIN-SUFFIX,onedrive.com,PROXY
-DOMAIN-SUFFIX,onenote.com,PROXY
-DOMAIN-SUFFIX,onenote.net,PROXY
-DOMAIN-SUFFIX,onmicrosoft.com,PROXY
 DOMAIN-SUFFIX,outlook.com,PROXY
-DOMAIN-SUFFIX,outlookgroups.ms,PROXY
-DOMAIN-SUFFIX,visualstudio.com,PROXY
-DOMAIN-SUFFIX,windows.com,PROXY
-DOMAIN-SUFFIX,windows.net,PROXY
-DOMAIN-SUFFIX,windowsupdate.com,PROXY
-
-PROCESS-NAME,Telegram,PROXY
 USER-AGENT,*Telegram*,PROXY
-
 DOMAIN-SUFFIX,goo.gl,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gvt1.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,youtu.be,PROXY,force-remote-dns
@@ -413,11 +352,9 @@ DOMAIN-KEYWORD,gmail,PROXY,force-remote-dns
 DOMAIN-KEYWORD,google,PROXY,force-remote-dns
 DOMAIN-KEYWORD,gstatic,PROXY,force-remote-dns
 DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
-
 USER-AGENT,*youtube*,PROXY
 USER-AGENT,YouTube*,PROXY
 DOMAIN-SUFFIX,googlevideo.com,PROXY,force-remote-dns
-
 DOMAIN,youtubei.googleapis.com,PROXY,force-remote-dns
 USER-AGENT,BBCiPlayer*,PROXY
 DOMAIN-SUFFIX,bbc.co.uk,PROXY,force-remote-dns
@@ -429,7 +366,6 @@ DOMAIN-SUFFIX,blogger.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,getoutline.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gvt0.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gvt3.com,PROXY,force-remote-dns
-
 DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
 DOMAIN-SUFFIX,cdninstagram.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,fb.me,PROXY,force-remote-dns
@@ -552,9 +488,7 @@ DOMAIN-SUFFIX,whatbrowser.org,PROXY
 DOMAIN-SUFFIX,widevine.com,PROXY
 DOMAIN-SUFFIX,x.company,PROXY
 DOMAIN-SUFFIX,xn—ngstr-lra8j.com,PROXY
-
 DOMAIN-SUFFIX,fb.com,PROXY,force-remote-dns
-
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.164.0/22,PROXY,no-resolve
 IP-CIDR,149.154.168.0/22,PROXY,no-resolve
@@ -562,11 +496,13 @@ IP-CIDR,149.154.172.0/22,PROXY,no-resolve
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,91.108.56.0/23,PROXY,no-resolve
-IP-CIDR6,2001:67c:4e8::/48,PROXY,no-resolve
-IP-CIDR6,2001:b28:f23d::/48,PROXY,no-resolve
-IP-CIDR6,2001:b28:f23f::/48,PROXY,no-resolve
-
-USER-AGENT,MicroMessenger Client,DIRECT
+USER-AGENT,hide*,DIRECT
+USER-AGENT,MicroMessenger*,DIRECT
+USER-AGENT,PayPal*,DIRECT
+USER-AGENT,TeamViewer*,DIRECT
+USER-AGENT,TIM*,DIRECT
+USER-AGENT,ting_en,DIRECT
+USER-AGENT,WebTorrent*,DIRECT
 USER-AGENT,WeChat*,DIRECT
 DOMAIN,blzddist1-a.akamaihd.net,DIRECT
 DOMAIN-SUFFIX,steampowered.com,DIRECT
@@ -591,15 +527,16 @@ DOMAIN-SUFFIX,cloudflare.com,DIRECT
 DOMAIN-SUFFIX,jd.hk,DIRECT
 DOMAIN-SUFFIX,maoyun.tv,DIRECT
 DOMAIN-SUFFIX,teamviewer.com,DIRECT
-USER-AGENT, %E4%BA%AC%E4%B8%9C%E5%88%B0%E5%AE%B6*,DIRECT
-USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
+IP-CIDR,1.255.62.0/24,DIRECT,no-resolve
 DOMAIN-SUFFIX,local,DIRECT
-IP-CIDR,134.175.0.0/16,DIRECT
-IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
-IP-CIDR,172.16.0.0/12,DIRECT
-IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
+IP-CIDR,127.0.0.0/8,DIRECT
+IP-CIDR,172.16.0.0/12,DIRECT
+IP-CIDR,192.168.0.0/16,DIRECT
+GEOIP,CN,DIRECT
+DOMAIN-SUFFIX,cn,DIRECT
+DOMAIN-KEYWORD,torrent,DIRECT
 GEOIP,CN,DIRECT
 FINAL,PROXY
 
