--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -60,12 +60,9 @@ HOST-SUFFIX,crashlytics.com,DIRECT
 HOST-SUFFIX,applovin.com,REJECT
 HOST,union.uc.cn,REJECT
 HOST-SUFFIX,1password.com,PROXY
-USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
-USER-AGENT,*WeatherFoundation*,DIRECT
-USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
-USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
-USER-AGENT,AppStore*,DIRECT
-USER-AGENT,com.apple.appstored*,DIRECT
+//Apple
+
+//定位相关
 USER-AGENT,com.apple.geod*,DIRECT
 USER-AGENT,com.apple.Maps,DIRECT
 USER-AGENT,FindMyFriends*,DIRECT
@@ -76,24 +73,29 @@ USER-AGENT,fmflocatord*,DIRECT
 USER-AGENT,geod*,DIRECT
 USER-AGENT,locationd*,DIRECT
 USER-AGENT,Maps*,DIRECT
-USER-AGENT,TestFlight*,DIRECT
-USER-AGENT,cloudd*,DIRECT
-HOST-SUFFIX,apple.com,DIRECT
-HOST-SUFFIX,icloud.com,DIRECT
-HOST-SUFFIX,itunes.com,DIRECT
-HOST-SUFFIX,me.com,DIRECT
-HOST-SUFFIX,mzstatic.com,DIRECT
-HOST,api.smoot.apple.cn,DIRECT
+//支付相关
 USER-AGENT,*Passbook*,DIRECT
 USER-AGENT,passd*,DIRECT
 USER-AGENT,seld*,DIRECT
 USER-AGENT,trustd*,DIRECT
 USER-AGENT,Wallet/1.0*,DIRECT
+//Siri
 USER-AGENT,*AssistantServices*,DIRECT
 USER-AGENT,MobileAsset*,DIRECT
 USER-AGENT,Siri*,DIRECT
-USER-AGENT,*siri*,DIRECT
-IP-CIDR,17.0.0.0/8,DIRECT
+
+DOMAIN,api.smoot.apple.com.cn,DIRECT
+DOMAIN,captive.apple.com,DIRECT
+DOMAIN,cn-smp-paymentservices.apple.com,DIRECT
+DOMAIN,smp-device.apple.com,DIRECT
+DOMAIN,smp-device-content.apple.com,DIRECT
+DOMAIN,sp.itunes.apple.com,DIRECT
+DOMAIN-SUFFIX,ess.apple.com,DIRECT
+DOMAIN-SUFFIX,push.apple.com,DIRECT
+DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
+DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
+DOMAIN-SUFFIX,ls.apple.com,DIRECT
+
 HOST,aoscdn.amap.com,REJECT
 HOST,page.amap.com,REJECT
 HOST,sync.amap.com,REJECT
@@ -101,6 +103,7 @@ HOST,mps.amap.com,REJECT
 HOST,aos-cdn-image.amap.com,REJECT
 HOST,wb.amap.com,REJECT
 HOST,f.amap.com,REJECT
+
 HOST-KEYWORD,analytics,REJECT
 HOST-SUFFIX,3lift.com,REJECT
 HOST-SUFFIX,51.la,REJECT
@@ -272,9 +275,6 @@ HOST,track.tiara.daum.net,REJECT
 HOST,track.tiara.kakao.com,REJECT
 HOST,trackapp.guahao.cn,REJECT
 HOST,traffic.mogujie.com,REJECT
-HOST-SUFFIX,doubleclick.net,REJECT
-HOST-SUFFIX,googlesyndication.com,REJECT
-HOST-SUFFIX,googletagmanager.com,REJECT
 HOST-SUFFIX,baidustatic.com,REJECT
 HOST,duclick.baidu.com,REJECT
 HOST,hm.baidu.com,REJECT
@@ -290,18 +290,17 @@ HOST,tunion-api.m.taobao.com,REJECT
 HOST-SUFFIX,atm.youku.com,REJECT
 HOST,ad.mobile.youku.com,REJECT
 HOST,iyes.youku.com,REJECT
-HOST,bugly.qq.com,REJECT
+
+//QQ
 HOST,e.qq.com,REJECT
-HOST,l.qq.com,REJECT
-HOST,rqd.qq.com,REJECT
-HOST,mi.gdt.qq.com,REJECT
 HOST,btrace.qq.com,REJECT
-HOST,mtrace.qq.com,REJECT
-HOST,oth.eve.mdt.qq.com,REJECT
-HOST,pingma.qq.com,REJECT
-HOST,pingtcss.qq.com,REJECT
-HOST,tajs.qq.com,REJECT
-HOST,btrace.qq.com,REJECT
+DOMAIN-SUFFIX,lives.l.qq.com,REJECT
+DOMAIN-SUFFIX,livep.l.qq.com,REJECT
+DOMAIN-SUFFIX,news.l.qq.com,REJECT
+DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
+DOMAIN-SUFFIX,mtrace.qq.com,REJECT
+DOMAIN-SUFFIX,pingma.qq.com,REJECT
+
 HOST,ad.bn.netease.com,REJECT
 HOST,iadmat.nosdn.127.net,REJECT
 HOST,iadmusicmat.music.126.net,REJECT
@@ -336,6 +335,27 @@ HOST-SUFFIX,aty.sohu.com,REJECT
 HOST,imp.optaim.com,REJECT
 HOST,v2.reachmax.cn,REJECT
 HOST,track.sohu.com,REJECT
+
+
+// Ali
+DOMAIN-SUFFIX,acs4baichuan.m.taobao.com,REJECT
+
+// Google
+DOMAIN-KEYWORD,googleads,REJECT
+DOMAIN-SUFFIX,ads.google.com,REJECT
+DOMAIN-SUFFIX,adservice.google.com,REJECT
+DOMAIN-SUFFIX,afd.l.google.com,REJECT
+DOMAIN-SUFFIX,doubleclick.com,REJECT
+DOMAIN-SUFFIX,doubleclick.net,REJECT
+DOMAIN-SUFFIX,google-analytics.com,REJECT
+DOMAIN-SUFFIX,googlesyndication.com,REJECT
+DOMAIN-SUFFIX,googletagmanager.com,REJECT
+DOMAIN-SUFFIX,mobileads.google.com,REJECT
+DOMAIN-SUFFIX,pagead.google.com,REJECT
+DOMAIN-SUFFIX,pagead.l.google.com,REJECT
+DOMAIN-SUFFIX,pagead-tpc.l.google.com,REJECT
+
+
 HOST-SUFFIX,fonts.googleapis.com,DIRECT
 HOST-SUFFIX,fonts.gstatic.com,DIRECT
 USER-AGENT,OneDrive*,PROXY
@@ -348,8 +368,12 @@ HOST-SUFFIX,office.com,PROXY
 HOST-SUFFIX,office.net,PROXY
 HOST-SUFFIX,outlook.com,PROXY
 USER-AGENT,*Telegram*,PROXY
+
+// Google
+IP-CIDR,173.194.0.0/16,PROXY,no-resolve
+IP-CIDR,74.125.0.0/16,PROXY,no-resolve
+
 HOST-SUFFIX,goo.gl,PROXY,resolve-on-proxy
-HOST-SUFFIX,gvt1.com,PROXY,resolve-on-proxy
 HOST-SUFFIX,youtu.be,PROXY,resolve-on-proxy
 HOST-SUFFIX,ytimg.com,PROXY,resolve-on-proxy
 HOST-SUFFIX,ggpht.com,PROXY,resolve-on-proxy
@@ -365,8 +389,7 @@ USER-AGENT,YouTube*,策略,force-remote-dns
 HOST-SUFFIX,googlevideo.com,策略,force-remote-dnsy
 HOST,youtubei.googleapis.com,策略,force-remote-dns
 USER-AGENT,BBCiPlayer*,策略,force-remote-dns
-HOST-SUFFIX,gvt0.com,策略,force-remote-dns
-HOST-SUFFIX,gvt3.com,策略,force-remote-dns
+HOST-SUFFIX,gvt2.com,策略,force-remote-dns
 
 HOST-SUFFIX,bbc.co.uk,PROXY,resolve-on-proxy
 HOST-SUFFIX,bbci.co.uk,PROXY,resolve-on-proxy
@@ -499,6 +522,25 @@ HOST-SUFFIX,widevine.com,PROXY
 HOST-SUFFIX,x.company,PROXY
 HOST-SUFFIX,xn—ngstr-lra8j.com,PROXY
 HOST-SUFFIX,fb.com,PROXY,resolve-on-proxy
+
+// Amazon
+IP-CIDR,13.32.0.0/16,PROXY,no-resolve
+IP-CIDR,13.33.0.0/16,PROXY,no-resolve
+IP-CIDR,13.35.0.0/17,PROXY,no-resolve
+IP-CIDR,18.184.0.0/15,PROXY,no-resolve
+IP-CIDR,18.194.0.0/15,PROXY,no-resolve
+IP-CIDR,18.208.0.0/13,PROXY,no-resolve
+IP-CIDR,18.232.0.0/14,PROXY,no-resolve
+IP-CIDR,52.200.0.0/13,PROXY,no-resolve
+IP-CIDR,52.58.0.0/15,PROXY,no-resolve
+IP-CIDR,52.74.0.0/16,PROXY,no-resolve
+IP-CIDR,52.77.0.0/16,PROXY,no-resolve
+IP-CIDR,52.84.0.0/15,PROXY,no-resolve
+IP-CIDR,54.156.0.0/14,PROXY,no-resolve
+IP-CIDR,54.226.0.0/15,PROXY,no-resolve
+IP-CIDR,54.230.156.0/22,PROXY,no-resolve
+IP-CIDR,54.93.0.0/16,PROXY,no-resolve
+
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.164.0/22,PROXY,no-resolve
 IP-CIDR,149.154.168.0/22,PROXY,no-resolve
