--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -561,7 +561,11 @@ HOST,steamcdn-a.akamaihd.net,DIRECT
 HOST,steamuserimages-a.akamaihd.net,DIRECT
 HOST,steamstore-a.akamaihd.net,DIRECT
 HOST-SUFFIX,teamviewer.com,DIRECT
+
+//腾讯IP
+IP-CIDR,134.175.0.0/16,DIRECT
 IP-CIDR,1.255.62.0/24,DIRECT,no-resolve
+
 HOST-SUFFIX,local,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
