--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -60,8 +60,26 @@ HOST-SUFFIX,crashlytics.com,DIRECT
 HOST-SUFFIX,applovin.com,REJECT
 HOST,union.uc.cn,REJECT
 HOST-SUFFIX,1password.com,PROXY
-//Apple
 
+//Apple
+IP-CIDR,17.0.0.0/8,选择Apple的策略，不懂就选择DIRECT,no-resolve
+DOMAIN,appleiphonecell.com,选择Apple的策略，不懂就选择DIRECT
+USER-AGENT,AppStore*,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-KEYWORD,icloud,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-KEYWORD,itunes,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,aaplimg.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,apple.co,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,apple.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,appsto.re,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,cdn-apple.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,me.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,mzstatic.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,icloud.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,icloud-content.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,itunes.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,itunes-apple.com.akadns.net,选择Apple的策略，不懂就选择DIRECT
+
+//Apple
 //定位相关
 USER-AGENT,com.apple.geod*,DIRECT
 USER-AGENT,com.apple.Maps,DIRECT
