--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -12,7 +12,7 @@ DOMAIN-SUFFIX,mazu.m.qq.com,DIRECT
 DOMAIN-SUFFIX,amazonaws.com,PROXY
 DOMAIN-SUFFIX,onedrive.com,PROXY
 DOMAIN-SUFFIX,1drv.com,PROXY
-DOMAIN-SUFFIX,54sadsad.com,PROXY
+DOMAIN-SUFFIX,sehuatang.org,PROXY
 DOMAIN-KEYWORD,outlook,PROXY
 USER-AGENT,Brawl%20Stars*,DIRECT
 DOMAIN-SUFFIX,mazu.m.qq.com,DIRECT
