--- a/kitsunebi.conf
+++ b/kitsunebi.conf
@@ -319,16 +319,7 @@ DOMAIN-SUFFIX,office.com,PROXY
 DOMAIN-SUFFIX,office.net,PROXY
 DOMAIN-SUFFIX,outlook.com,PROXY
 USER-AGENT,*Telegram*,PROXY
-DOMAIN-SUFFIX,goo.gl,PROXY,force-remote-dns
-DOMAIN-SUFFIX,youtu.be,PROXY,force-remote-dns
-DOMAIN-SUFFIX,ytimg.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,ggpht.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,google.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,googleapis.com,PROXY,force-remote-dns
-DOMAIN-KEYWORD,gmail,PROXY,force-remote-dns
-DOMAIN-KEYWORD,google,PROXY,force-remote-dns
-DOMAIN-KEYWORD,gstatic,PROXY,force-remote-dns
-DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
+
 USER-AGENT,*youtube*,PROXY
 USER-AGENT,YouTube*,PROXY
 DOMAIN-SUFFIX,googlevideo.com,PROXY,force-remote-dns
@@ -511,14 +502,21 @@ GEOIP,cn,DIRECT
 # Local Area Network
 GEOIP,private,DIRECT
 [DnsServer]
-223.5.5.5,53,LOCAL
-114.114.114.114
+114.114.114.114,53,LOCAL
+223.5.5.5
+119.29.29.29
 8.8.8.8,53,REMOTE
 
 [DnsRule]
 DOMAIN-KEYWORD,geosite:cn,LOCAL
 # (DNS Cache Pollution Protection)
 # > Google
+DOMAIN-SUFFIX,goo.gl,REMOTE
+DOMAIN-SUFFIX,youtu.be,REMOTE
+DOMAIN-SUFFIX,ytimg.com,REMOTE
+DOMAIN-SUFFIX,ggpht.com,PROXY,REMOTE
+DOMAIN-KEYWORD,gmail,REMOTE
+DOMAIN-KEYWORD,gstatic,PROXY,REMOTE
 DOMAIN-SUFFIX,appspot.com,REMOTE
 DOMAIN-SUFFIX,blogger.com,REMOTE
 DOMAIN-SUFFIX,getoutline.org,REMOTE
