--- a/kitsunebi.conf
+++ b/kitsunebi.conf
@@ -35,7 +35,6 @@ DOMAIN-SUFFIX,ksosoft.com,REJECT
 USER-AGENT,wpsoffice*,REJECT
 DOMAIN-SUFFIX,culturedcode.com,DIRECT
 DOMAIN-SUFFIX,zaobao.com,PROXY
-DOMAIN-SUFFIX,newsblur.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,inner-active.mobi,REJECT
 DOMAIN,x.appbaqend.com,REJECT
 DOMAIN-SUFFIX,applovin.com,REJECT
@@ -322,100 +321,8 @@ USER-AGENT,*Telegram*,PROXY
 
 USER-AGENT,*youtube*,PROXY
 USER-AGENT,YouTube*,PROXY
-DOMAIN-SUFFIX,googlevideo.com,PROXY,force-remote-dns
-DOMAIN,youtubei.googleapis.com,PROXY,force-remote-dns
+
 USER-AGENT,BBCiPlayer*,PROXY
-DOMAIN-SUFFIX,bbc.co.uk,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bbci.co.uk,PROXY,force-remote-dns
-DOMAIN-KEYWORD,bbcfmt,PROXY,force-remote-dns
-DOMAIN-KEYWORD,uk-live,PROXY,force-remote-dns
-DOMAIN-SUFFIX,appspot.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,blogger.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,getoutline.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,gvt2.com,PROXY,force-remote-dns
-DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
-DOMAIN-SUFFIX,cdninstagram.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,fb.me,PROXY,force-remote-dns
-DOMAIN-SUFFIX,fbcdn.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,instagram.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,messenger.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,whatsapp.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,whatsapp.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,oculus.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,oculuscdn.com,PROXY,force-remote-dns
-DOMAIN-KEYWORD,facebook,PROXY,force-remote-dns
-DOMAIN-SUFFIX,t.co,PROXY,force-remote-dns
-DOMAIN-SUFFIX,twimg.co,PROXY,force-remote-dns
-DOMAIN-SUFFIX,twimg.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,twitpic.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,twitter.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,line.me,PROXY,force-remote-dns
-DOMAIN-SUFFIX,line-apps.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,naver.jp,PROXY,force-remote-dns
-DOMAIN-SUFFIX,abc.net.au,PROXY,force-remote-dns
-DOMAIN-SUFFIX,amazon.co.jp,PROXY,force-remote-dns
-DOMAIN-SUFFIX,apk-dl.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,apkpure.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,ask.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bandwagonDOMAIN.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bbc.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,behance.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bibox.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,binance.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bitfinex.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,booklive.jp,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bwh1.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,cbc.ca,PROXY,force-remote-dns
-DOMAIN-SUFFIX,dailymotion.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,deezer.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,dropbox.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,dropboxusercontent.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,duckduckgo.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,feedly.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,flickr.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,gate.io,PROXY,force-remote-dns
-DOMAIN-SUFFIX,goodreads.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,huobi.pro,PROXY,force-remote-dns
-DOMAIN-SUFFIX,initiummall.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,kakao.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,live.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,medium.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,mega.nz,PROXY,force-remote-dns
-DOMAIN-SUFFIX,naver.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,nyt.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,nytco.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,nytimes.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,nytstyle.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,ok.ru,PROXY,force-remote-dns
-DOMAIN-SUFFIX,okex.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,pinterest.com,PROXY,force-remote-dns
-DOMAIN-KEYWORD,pixiv,PROXY,force-remote-dns
-DOMAIN-SUFFIX,quora.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,reddit.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,redditmedia.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,reuters.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,scribd.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,shadowsocks.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,slideshare.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,soundcloud.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,steamcommunity.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,telegram.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,theinitium.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,tineye.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,tumblr.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,twitch.tv,PROXY,force-remote-dns
-DOMAIN-SUFFIX,uptodown.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,v2ray.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,vimeo.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,vine.co,PROXY,force-remote-dns
-DOMAIN-SUFFIX,voachinese.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,whoer.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,wikipedia.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,wsj.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,wsj.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,yahoo.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,pornhub.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,xvideos.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,abc.xyz,PROXY
 DOMAIN-SUFFIX,android.com,PROXY
 DOMAIN-SUFFIX,androidify.com,PROXY
@@ -455,14 +362,14 @@ DOMAIN-SUFFIX,whatbrowser.org,PROXY
 DOMAIN-SUFFIX,widevine.com,PROXY
 DOMAIN-SUFFIX,x.company,PROXY
 DOMAIN-SUFFIX,xn—ngstr-lra8j.com,PROXY
-DOMAIN-SUFFIX,fb.com,PROXY,force-remote-dns
-IP-CIDR,109.239.140.0/24,PROXY,no-resolve
-IP-CIDR,149.154.164.0/22,PROXY,no-resolve
-IP-CIDR,149.154.168.0/22,PROXY,no-resolve
-IP-CIDR,149.154.172.0/22,PROXY,no-resolve
+
+# > Telegram
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
+IP-CIDR,91.108.8.0/22,PROXY,no-resolve
 IP-CIDR,91.108.56.0/22,PROXY,no-resolve
-IP-CIDR,91.108.56.0/23,PROXY,no-resolve
+IP-CIDR,109.239.140.0/24,PROXY,no-resolve
+IP-CIDR,149.154.160.0/20,PROXY,no-resolve
+
 USER-AGENT,hide*,DIRECT
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,PayPal*,DIRECT
@@ -633,6 +540,7 @@ DOMAIN,onedrive.live.com,REMOTE
 DOMAIN-KEYWORD,jav,REMOTE
 DOMAIN-KEYWORD,pinterest,REMOTE
 DOMAIN-KEYWORD,porn,REMOTE
+DOMAIN-SUFFIX,newsblur.com,REMOTE
 
 [DnsClientIp]
 112.80.89.53
