--- a/kitsunebi.conf
+++ b/kitsunebi.conf
@@ -10,11 +10,8 @@ DOMAIN-SUFFIX,amazonaws.com,PROXY
 DOMAIN-SUFFIX,onedrive.com,PROXY
 DOMAIN-SUFFIX,1drv.com,PROXY
 DOMAIN-SUFFIX,sehuatang.org,PROXY
-DOMAIN-KEYWORD,outlook,PROXY
 USER-AGENT,Brawl%20Stars*,DIRECT
-DOMAIN-SUFFIX,mazu.m.qq.com,DIRECT
-DOMAIN-KEYWORD,pixiv,PROXY
-DOMAIN-SUFFIX,v2ex.com,PROXY
+DOMAIN-SUFFIX,v2ex.com,DIRECT
 DOMAIN-SUFFIX,maying.co,PROXY
 DOMAIN-SUFFIX,appodeal.com,REJECT
 DOMAIN-SUFFIX,applvn.com,REJECT
