--- a/kitsunebi.conf
+++ b/kitsunebi.conf
@@ -386,12 +386,25 @@ GEOIP,private,DIRECT
 
 [DnsServer]
 114.114.114.114,53,LOCAL
-223.5.5.5
-119.29.29.29
+223.5.5.5,53,ALI
+119.29.29.29,53,TX
 8.8.8.8,53,REMOTE
 
 [DnsRule]
 DOMAIN-KEYWORD,geosite:cn,LOCAL
+DOMAIN-SUFFIX,alicdn.com,ALI
+DOMAIN-SUFFIX,alipay.com,ALI
+DOMAIN-SUFFIX,alipayobjects.com,ALI
+DOMAIN-SUFFIX,aliyun.com,ALI
+DOMAIN-SUFFIX,amap.com,ALI
+DOMAIN-SUFFIX,autonavi.com,ALI
+DOMAIN-SUFFIX,taobao.com,ALI
+DOMAIN-SUFFIX,tmall.com,ALI
+
+DOMAIN-SUFFIX,qq.com,TX
+DOMAIN-SUFFIX,qqurl.com,TX
+DOMAIN-SUFFIX,lxysh.xyz,TX
+
 # (DNS Cache Pollution Protection)
 # > Google
 DOMAIN-SUFFIX,goo.gl,REMOTE
