--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -65,6 +65,8 @@ HOST-SUFFIX,1password.com,PROXY
 
 // Microsoft
 IP-CIDR,40.64.0.0/10,PROXY,no-resolve
+HOST-SUFFIX,acompli.net,PROXY
+
 HOST-SUFFIX,fonts.googleapis.com,DIRECT
 HOST-SUFFIX,fonts.gstatic.com,DIRECT
 
