--- a/kitsunebi.conf
+++ b/kitsunebi.conf
@@ -5,11 +5,15 @@ IP-CIDR,1.0.0.1/32,PROXY
 IP-CIDR,8.8.8.8/32,PROXY
 IP-CIDR,8.8.4.4/32,PROXY
 //me
+IP-CIDR,192.126.125.210/32,DIRECT
+DOMAIN,audid-api.taobao.com,REJECT
+DOMAIN,fuwu.wap.sogou.com,REJECT
+DOMAIN-SUFFIX,sehuatang.org,PROXY
+DOMAIN-SUFFIX,beautylegmm.com,PROXY
 DOMAIN-SUFFIX,mazu.m.qq.com,DIRECT
 DOMAIN-SUFFIX,amazonaws.com,PROXY
 DOMAIN-SUFFIX,onedrive.com,PROXY
 DOMAIN-SUFFIX,1drv.com,PROXY
-DOMAIN-SUFFIX,sehuatang.org,PROXY
 USER-AGENT,Brawl%20Stars*,DIRECT
 DOMAIN-SUFFIX,v2ex.com,DIRECT
 DOMAIN-SUFFIX,maying.co,PROXY
@@ -18,7 +22,7 @@ DOMAIN-SUFFIX,applvn.com,REJECT
 DOMAIN-SUFFIX,tlnk.io,REJECT
 DOMAIN,track.tenjin.io,REJECT
 DOMAIN-SUFFIX,mtvip.net,DIRECT
-DOMAIN-SUFFIX,lxysh.co,DIRECT
+DOMAIN-SUFFIX,lxysh.xyz,DIRECT
 DOMAIN-SUFFIX,bdstatic.com,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
 DOMAIN-SUFFIX,ssr.sh,PROXY
