--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -2,37 +2,40 @@
 [General]
 bypass-system = true
 dns-server = system
-skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,*.crashlytics.com
+skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,*.crashlytics.com,*.lxysh.xyz
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 
 
 [Rule]
 //me
+DOMAIN-SUFFIX,pixhost.to,PROXY
+DOMAIN-SUFFIX,ampproject.org,PROXY
+DOMAIN-SUFFIX,beautylegmm.com,PROXY
+DOMAIN,audid-api.taobao.com,REJECT
+DOMAIN,fuwu.wap.sogou.com,REJECT
+DOMAIN-SUFFIX,sehuatang.org,PROXY
 DOMAIN-SUFFIX,mazu.m.qq.com,DIRECT
 DOMAIN-SUFFIX,amazonaws.com,PROXY
+DOMAIN-SUFFIX,amazon.com,PROXY
 DOMAIN-SUFFIX,onedrive.com,PROXY
 DOMAIN-SUFFIX,1drv.com,PROXY
 DOMAIN-SUFFIX,sehuatang.org,PROXY
 DOMAIN-KEYWORD,outlook,PROXY
 USER-AGENT,Brawl%20Stars*,DIRECT
-DOMAIN-SUFFIX,mazu.m.qq.com,DIRECT
-DOMAIN-KEYWORD,pixiv,PROXY
-DOMAIN-SUFFIX,v2ex.com,PROXY
 DOMAIN-SUFFIX,maying.co,PROXY
 DOMAIN-SUFFIX,appodeal.com,REJECT
 DOMAIN-SUFFIX,applvn.com,REJECT
 DOMAIN-SUFFIX,tlnk.io,REJECT
 DOMAIN,track.tenjin.io,REJECT
 DOMAIN-SUFFIX,mtvip.net,DIRECT
-DOMAIN-SUFFIX,lxysh.co,DIRECT
+DOMAIN-SUFFIX,lxysh.xyz,DIRECT
 DOMAIN-SUFFIX,bdstatic.com,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
 DOMAIN-SUFFIX,ssr.sh,PROXY
-DOMAIN-SUFFIX,cordcloud.me,PROXY
+DOMAIN-SUFFIX,cordcloud.cc,PROXY
 DOMAIN-SUFFIX,cloudfront.net,DIRECT
 DOMAIN-SUFFIX,pthome.net,DIRECT
 DOMAIN,ad-stat.ksosoft.com,REJECT
-DOMAIN-SUFFIX,wps.cn,REJECT
 DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
 DOMAIN-SUFFIX,ksosoft.com,REJECT
 USER-AGENT,wpsoffice*,REJECT
@@ -261,6 +264,8 @@ DOMAIN,amdc.m.taobao.com,REJECT
 DOMAIN,apoll.m.taobao.com,REJECT
 DOMAIN,nbsdk-baichuan.alicdn.com,REJECT
 DOMAIN,tunion-api.m.taobao.com,REJECT
+DOMAIN-SUFFIX,c-adash.m.taobao.com,REJECT
+DOMAIN-SUFFIX,m-adash.m.taobao.com,REJECT
 DOMAIN-SUFFIX,atm.youku.com,REJECT
 DOMAIN,ad.mobile.youku.com,REJECT
 DOMAIN,iyes.youku.com,REJECT
@@ -275,7 +280,6 @@ DOMAIN,oth.eve.mdt.qq.com,REJECT
 DOMAIN,pingma.qq.com,REJECT
 DOMAIN,pingtcss.qq.com,REJECT
 DOMAIN,tajs.qq.com,REJECT
-DOMAIN,btrace.qq.com,REJECT
 DOMAIN,ad.bn.netease.com,REJECT
 DOMAIN,iadmat.nosdn.127.net,REJECT
 DOMAIN,iadmusicmat.music.126.net,REJECT
@@ -322,6 +326,7 @@ DOMAIN-SUFFIX,office.com,PROXY
 DOMAIN-SUFFIX,office.net,PROXY
 DOMAIN-SUFFIX,outlook.com,PROXY
 USER-AGENT,*Telegram*,PROXY
+
 DOMAIN-SUFFIX,goo.gl,PROXY,force-remote-dns
 DOMAIN-SUFFIX,youtu.be,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ytimg.com,PROXY,force-remote-dns
@@ -332,11 +337,15 @@ DOMAIN-KEYWORD,gmail,PROXY,force-remote-dns
 DOMAIN-KEYWORD,google,PROXY,force-remote-dns
 DOMAIN-KEYWORD,gstatic,PROXY,force-remote-dns
 DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
+
 USER-AGENT,*youtube*,PROXY
 USER-AGENT,YouTube*,PROXY
+
 DOMAIN-SUFFIX,googlevideo.com,PROXY,force-remote-dns
 DOMAIN,youtubei.googleapis.com,PROXY,force-remote-dns
+
 USER-AGENT,BBCiPlayer*,PROXY
+
 DOMAIN-SUFFIX,bbc.co.uk,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bbci.co.uk,PROXY,force-remote-dns
 DOMAIN-KEYWORD,bbcfmt,PROXY,force-remote-dns
@@ -428,6 +437,7 @@ DOMAIN-SUFFIX,wsj.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,yahoo.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,pornhub.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,xvideos.com,PROXY,force-remote-dns
+
 DOMAIN-SUFFIX,abc.xyz,PROXY
 DOMAIN-SUFFIX,android.com,PROXY
 DOMAIN-SUFFIX,androidify.com,PROXY
@@ -468,6 +478,45 @@ DOMAIN-SUFFIX,widevine.com,PROXY
 DOMAIN-SUFFIX,x.company,PROXY
 DOMAIN-SUFFIX,xn—ngstr-lra8j.com,PROXY
 DOMAIN-SUFFIX,fb.com,PROXY,force-remote-dns
+
+// Amazon
+IP-CIDR,13.32.0.0/16,no-resolve
+IP-CIDR,13.33.0.0/16,no-resolve
+IP-CIDR,13.35.0.0/17,no-resolve
+IP-CIDR,18.184.0.0/15,no-resolve
+IP-CIDR,18.194.0.0/15,no-resolve
+IP-CIDR,18.208.0.0/13,no-resolve
+IP-CIDR,18.232.0.0/14,no-resolve
+IP-CIDR,52.200.0.0/13,no-resolve
+IP-CIDR,52.58.0.0/15,no-resolve
+IP-CIDR,52.74.0.0/16,no-resolve
+IP-CIDR,52.77.0.0/16,no-resolve
+IP-CIDR,52.84.0.0/15,no-resolve
+IP-CIDR,54.156.0.0/14,no-resolve
+IP-CIDR,54.226.0.0/15,no-resolve
+IP-CIDR,54.230.156.0/22,no-resolve
+IP-CIDR,54.93.0.0/16,no-resolve
+
+// Facebook
+IP-CIDR,103.4.96.0/22,no-resolve
+IP-CIDR,129.134.0.0/17,no-resolve
+IP-CIDR,157.240.0.0/17,no-resolve
+IP-CIDR,173.252.64.0/19,no-resolve
+IP-CIDR,173.252.96.0/19,no-resolve
+IP-CIDR,179.60.192.0/22,no-resolve
+IP-CIDR,185.60.216.0/22,no-resolve
+IP-CIDR,204.15.20.0/22,no-resolve
+IP-CIDR,31.13.24.0/21,no-resolve
+IP-CIDR,31.13.64.0/18,no-resolve
+IP-CIDR,45.64.40.0/22,no-resolve
+IP-CIDR,66.220.144.0/20,no-resolve
+IP-CIDR,69.171.224.0/19,no-resolve
+IP-CIDR,69.63.176.0/20,no-resolve
+IP-CIDR,74.119.76.0/22,no-resolve
+
+// Google
+IP-CIDR,173.194.0.0/16,no-resolve
+IP-CIDR,74.125.0.0/16,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.164.0/22,PROXY,no-resolve
 IP-CIDR,149.154.168.0/22,PROXY,no-resolve
@@ -475,6 +524,8 @@ IP-CIDR,149.154.172.0/22,PROXY,no-resolve
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,91.108.56.0/23,PROXY,no-resolve
+
+
 USER-AGENT,hide*,DIRECT
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,PayPal*,DIRECT
@@ -507,6 +558,7 @@ DOMAIN-SUFFIX,jd.hk,DIRECT
 DOMAIN-SUFFIX,maoyun.tv,DIRECT
 DOMAIN-SUFFIX,teamviewer.com,DIRECT
 IP-CIDR,1.255.62.0/24,DIRECT,no-resolve
+
 # Domestic
 DOMAIN-SUFFIX,12306.cn,DIRECT
 DOMAIN-SUFFIX,12306.com,DIRECT
@@ -560,7 +612,6 @@ DOMAIN-SUFFIX,cloudxns.net,DIRECT
 DOMAIN-SUFFIX,cmfu.com,DIRECT
 DOMAIN-SUFFIX,cnbeta.com,DIRECT
 DOMAIN-SUFFIX,cnbetacdn.com,DIRECT
-DOMAIN-SUFFIX,culturedcode.com,DIRECT
 DOMAIN-SUFFIX,dct-cloud.com,DIRECT
 DOMAIN-SUFFIX,didialift.com,DIRECT
 DOMAIN-SUFFIX,douban.com,DIRECT
@@ -603,7 +654,6 @@ DOMAIN-SUFFIX,ipip.net,DIRECT
 DOMAIN-SUFFIX,ithome.com,DIRECT
 DOMAIN-SUFFIX,ixdzs.com,DIRECT
 DOMAIN-SUFFIX,jd.com,DIRECT
-DOMAIN-SUFFIX,jd.hk,DIRECT
 DOMAIN-SUFFIX,jianshu.com,DIRECT
 DOMAIN-SUFFIX,jianshu.io,DIRECT
 DOMAIN-SUFFIX,jianshuapi.com,DIRECT
@@ -678,14 +728,12 @@ DOMAIN-SUFFIX,sogoucdn.com,DIRECT
 DOMAIN-SUFFIX,sohu.com,DIRECT
 DOMAIN-SUFFIX,soku.com,DIRECT
 DOMAIN-SUFFIX,soso.com,DIRECT
-DOMAIN-SUFFIX,speedtest.net,DIRECT
 DOMAIN-SUFFIX,sspai.com,DIRECT
 DOMAIN-SUFFIX,startssl.com,DIRECT
 DOMAIN-SUFFIX,store.steampowered.com,DIRECT
 DOMAIN-SUFFIX,suning.com,DIRECT
 DOMAIN-SUFFIX,symcd.com,DIRECT
 DOMAIN-SUFFIX,taobao.com,DIRECT
-DOMAIN-SUFFIX,teamviewer.com,DIRECT
 DOMAIN-SUFFIX,tenpay.com,DIRECT
 DOMAIN-SUFFIX,tietuku.com,DIRECT
 DOMAIN-SUFFIX,tmall.com,DIRECT
@@ -741,30 +789,41 @@ DOMAIN-SUFFIX,zealer.com,DIRECT
 DOMAIN-SUFFIX,zgslb.net,DIRECT
 DOMAIN-SUFFIX,zhihu.com,DIRECT
 DOMAIN-SUFFIX,zhimg.com,DIRECT
-DOMAIN-SUFFIX,zimuzu.tv,DIRECT
 DOMAIN-SUFFIX,zmz002.com,DIRECT
+
+DOMAIN-SUFFIX,local,DIRECT
+IP-CIDR,10.0.0.0/8,DIRECT
+IP-CIDR,100.64.0.0/10,DIRECT
+IP-CIDR,127.0.0.0/8,DIRECT
+IP-CIDR,172.16.0.0/12,DIRECT
+IP-CIDR,192.168.0.0/16,DIRECT
 GEOIP,CN,DIRECT
-DOMAIN-SUFFIX,cn,DIRECT
 DOMAIN-KEYWORD,torrent,DIRECT
+
 FINAL,PROXY
 
 [URL Rewrite]
-^https?://(www.)?g.cn https://www.google.com.tw 302
-^https?://(www.)?google.cn https://www.google.com.tw 302
 // Wiki
 ^https?:\/\/.+.(m\.)?wikipedia\.org/wiki http://www.wikiwand.com/en 302
 ^https?:\/\/zh.(m\.)?wikipedia\.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
 ^https?:\/\/zh.(m\.)?wikipedia\.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
 
-[Header Rewrite]
-^*.bdimg.com header-del Referer
-^*.qpic.cn header-replace User-Agent WeChat/6.5.22.32 CFNetwork/889.9 Darwin/17.2.0
-^*.qpic.cn header-del Referer
-^*.ph.126.net header-del Referer
-^*.zhimg.com header-del Referer
-^*.cnbetacdn.com header-del Referer
-^*.zhiding.cn header-del Referer
-^*.c114.com.cn header-del Referer
-^https?://www.biquge.com.tw header-del Cookie
-^https?://www.zhihu.com/question/ header-replace User-Agent Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.45 Safari/537.36
+// Anti_ISP_Taobao_Hijack
+^https?:\/\/m\.taobao\.com\/ https://m.taobao.com/ 302
+
+// Google_Service_HTTPS_Jump
+^https?:\/\/(www\.)?g\.cn https://www.google.com 302
+^https?:\/\/(www\.)?google\.cn https://www.google.com 302
+
+// Anti_ISP_JavaScript_Injection
+^https?:\/\/c\.minisplat\.cn - reject
+^https?:\/\/c1\.minisplat\.cn - reject
+^https?:\/\/cache\.changjingyi\.cn - reject
+^https?:\/\/cache\.gclick\.cn - reject
+
+// Anti_ISP_Safari_Baidu_CPM_Hijack
+^https?:\/\/m\.coolaiy\.com\/b\.php - reject
+^https?:\/\/www\.babyye\.com\/b\.php - reject
+^https?:\/\/www\.gwv7\.com\/b\.php - reject
+^https?:\/\/www\.likeji\.net\/b\.php - reject
 
