--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -8,9 +8,11 @@ bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,1
 
 [Rule]
 //me
+DOMAIN-SUFFIX,hockeyapp.net,PROXY
 DOMAIN-SUFFIX,pixhost.to,PROXY
 DOMAIN-SUFFIX,ampproject.org,PROXY
 DOMAIN-SUFFIX,beautylegmm.com,PROXY
+IP-CIDR,101.227.97.240/32,DIRECT,no-resolve
 DOMAIN,audid-api.taobao.com,REJECT
 DOMAIN,fuwu.wap.sogou.com,REJECT
 DOMAIN-SUFFIX,sehuatang.org,PROXY
