--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -8,8 +8,13 @@ bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,1
 
 [Rule]
 //me
-DOMAIN-SUFFIX,hockeyapp.net,PROXY
+DOMAIN-SUFFIX,acomppli.net,PROXY
+DOMAIN-SUFFIX,helpshift.com,PROXY
+DOMAIN-SUFFIX,evernote.com,PROXY
+DOMAIN-SUFFIX,hockeyapp.net,REJECT
 DOMAIN-SUFFIX,pixhost.to,PROXY
+DOMAIN-SUFFIX,tiqcdn.com,DIRECT
+DOMAIN-SUFFIX,aolcdn.com,DIRECT
 DOMAIN-SUFFIX,ampproject.org,PROXY
 DOMAIN-SUFFIX,beautylegmm.com,PROXY
 IP-CIDR,34.80.56.62/32,DIRECT,no-resolve
@@ -22,6 +27,7 @@ DOMAIN-SUFFIX,amazon.com,PROXY
 DOMAIN-SUFFIX,onedrive.com,PROXY
 DOMAIN-SUFFIX,1drv.com,PROXY
 DOMAIN-SUFFIX,sehuatang.org,PROXY
+DOMAIN-KEYWORD,github,PROXY
 DOMAIN-KEYWORD,outlook,PROXY
 USER-AGENT,Brawl%20Stars*,DIRECT
 DOMAIN-SUFFIX,maying.co,PROXY
