--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -8,7 +8,7 @@ bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,1
 
 [Rule]
 //me
-DOMAIN-SUFFIX,acomppli.net,PROXY
+DOMAIN-SUFFIX,acompli.net,PROXY
 DOMAIN-SUFFIX,helpshift.com,PROXY
 DOMAIN-SUFFIX,evernote.com,PROXY
 DOMAIN-SUFFIX,hockeyapp.net,REJECT
