--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -24,11 +24,8 @@ DOMAIN-SUFFIX,sehuatang.org,PROXY
 DOMAIN-SUFFIX,mazu.m.qq.com,DIRECT
 DOMAIN-SUFFIX,amazonaws.com,PROXY
 DOMAIN-SUFFIX,amazon.com,PROXY
-DOMAIN-SUFFIX,onedrive.com,PROXY
-DOMAIN-SUFFIX,1drv.com,PROXY
-DOMAIN-SUFFIX,sehuatang.org,PROXY
+
 DOMAIN-KEYWORD,github,PROXY
-DOMAIN-KEYWORD,outlook,PROXY
 USER-AGENT,Brawl%20Stars*,DIRECT
 DOMAIN-SUFFIX,maying.co,PROXY
 DOMAIN-SUFFIX,appodeal.com,REJECT
@@ -322,8 +319,10 @@ DOMAIN-SUFFIX,aty.sohu.com,REJECT
 DOMAIN,imp.optaim.com,REJECT
 DOMAIN,v2.reachmax.cn,REJECT
 DOMAIN,track.sohu.com,REJECT
+
 DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
 DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
+
 USER-AGENT,OneDrive*,PROXY
 DOMAIN-KEYWORD,microsoft,PROXY
 DOMAIN-SUFFIX,hotmail.com,PROXY
@@ -334,6 +333,30 @@ DOMAIN-SUFFIX,office.com,PROXY
 DOMAIN-SUFFIX,office.net,PROXY
 DOMAIN-SUFFIX,outlook.com,PROXY
 USER-AGENT,*Telegram*,PROXY
+
+// Spotify
+USER-AGENT,*Spotify*,foreign_media
+DOMAIN-KEYWORD,spotify,foreign_media
+DOMAIN-SUFFIX,scdn.co,foreign_media
+DOMAIN-SUFFIX,spoti.fi,foreign_media
+// BBC
+USER-AGENT,BBCiPlayer*,foreign_media
+DOMAIN-KEYWORD,bbcfmt,foreign_media
+DOMAIN-KEYWORD,co.uk,foreign_media
+DOMAIN-KEYWORD,uk-live,foreign_media
+DOMAIN-SUFFIX,bbc.co,foreign_media
+DOMAIN-SUFFIX,bbc.co.uk,foreign_media
+DOMAIN-SUFFIX,bbc.com,foreign_media
+DOMAIN-SUFFIX,bbci.co,foreign_media
+DOMAIN-SUFFIX,bbci.co.uk,foreign_media
+
+// Youtube
+USER-AGENT,*youtube*,foreign_media
+USER-AGENT,YouTube*,foreign_media
+DOMAIN-KEYWORD,youtube,foreign_media
+DOMAIN-SUFFIX,googlevideo.com,foreign_media
+DOMAIN-SUFFIX,gvt2.com,foreign_media
+DOMAIN-SUFFIX,youtu.be,foreign_media
 
 DOMAIN-SUFFIX,goo.gl,PROXY,force-remote-dns
 DOMAIN-SUFFIX,youtu.be,PROXY,force-remote-dns
@@ -346,16 +369,11 @@ DOMAIN-KEYWORD,google,PROXY,force-remote-dns
 DOMAIN-KEYWORD,gstatic,PROXY,force-remote-dns
 DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
 
-USER-AGENT,*youtube*,PROXY
-USER-AGENT,YouTube*,PROXY
 
-DOMAIN-SUFFIX,googlevideo.com,PROXY,force-remote-dns
 DOMAIN,youtubei.googleapis.com,PROXY,force-remote-dns
 
 USER-AGENT,BBCiPlayer*,PROXY
 
-DOMAIN-SUFFIX,bbc.co.uk,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bbci.co.uk,PROXY,force-remote-dns
 DOMAIN-KEYWORD,bbcfmt,PROXY,force-remote-dns
 DOMAIN-KEYWORD,uk-live,PROXY,force-remote-dns
 DOMAIN-SUFFIX,appspot.com,PROXY,force-remote-dns
