--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -335,28 +335,28 @@ DOMAIN-SUFFIX,outlook.com,PROXY
 USER-AGENT,*Telegram*,PROXY
 
 // Spotify
-USER-AGENT,*Spotify*,foreign_media
-DOMAIN-KEYWORD,spotify,foreign_media
-DOMAIN-SUFFIX,scdn.co,foreign_media
-DOMAIN-SUFFIX,spoti.fi,foreign_media
+USER-AGENT,*Spotify*,V525U-2X-深圳大阪KI-NU*
+DOMAIN-KEYWORD,spotify,V525U-2X-深圳大阪KI-NU*
+DOMAIN-SUFFIX,scdn.co,V525U-2X-深圳大阪KI-NU*
+DOMAIN-SUFFIX,spoti.fi,V525U-2X-深圳大阪KI-NU*
 // BBC
-USER-AGENT,BBCiPlayer*,foreign_media
-DOMAIN-KEYWORD,bbcfmt,foreign_media
-DOMAIN-KEYWORD,co.uk,foreign_media
-DOMAIN-KEYWORD,uk-live,foreign_media
-DOMAIN-SUFFIX,bbc.co,foreign_media
-DOMAIN-SUFFIX,bbc.co.uk,foreign_media
-DOMAIN-SUFFIX,bbc.com,foreign_media
-DOMAIN-SUFFIX,bbci.co,foreign_media
-DOMAIN-SUFFIX,bbci.co.uk,foreign_media
+USER-AGENT,BBCiPlayer*,V525U-2X-深圳大阪KI-NU*
+DOMAIN-KEYWORD,bbcfmt,V525U-2X-深圳大阪KI-NU*
+DOMAIN-KEYWORD,co.uk,V525U-2X-深圳大阪KI-NU*
+DOMAIN-KEYWORD,uk-live,V525U-2X-深圳大阪KI-NU*
+DOMAIN-SUFFIX,bbc.co,V525U-2X-深圳大阪KI-NU*
+DOMAIN-SUFFIX,bbc.co.uk,V525U-2X-深圳大阪KI-NU*
+DOMAIN-SUFFIX,bbc.com,V525U-2X-深圳大阪KI-NU*
+DOMAIN-SUFFIX,bbci.co,V525U-2X-深圳大阪KI-NU*
+DOMAIN-SUFFIX,bbci.co.uk,V525U-2X-深圳大阪KI-NU*
 
 // Youtube
-USER-AGENT,*youtube*,foreign_media
-USER-AGENT,YouTube*,foreign_media
-DOMAIN-KEYWORD,youtube,foreign_media
-DOMAIN-SUFFIX,googlevideo.com,foreign_media
-DOMAIN-SUFFIX,gvt2.com,foreign_media
-DOMAIN-SUFFIX,youtu.be,foreign_media
+USER-AGENT,*youtube*,V525U-2X-深圳大阪KI-NU*
+USER-AGENT,YouTube*,V525U-2X-深圳大阪KI-NU*
+DOMAIN-KEYWORD,youtube,V525U-2X-深圳大阪KI-NU*
+DOMAIN-SUFFIX,googlevideo.com,V525U-2X-深圳大阪KI-NU*
+DOMAIN-SUFFIX,gvt2.com,V525U-2X-深圳大阪KI-NU*
+DOMAIN-SUFFIX,youtu.be,V525U-2X-深圳大阪KI-NU*
 
 DOMAIN-SUFFIX,goo.gl,PROXY,force-remote-dns
 DOMAIN-SUFFIX,youtu.be,PROXY,force-remote-dns
@@ -367,12 +367,6 @@ DOMAIN-SUFFIX,googleapis.com,PROXY,force-remote-dns
 DOMAIN-KEYWORD,gmail,PROXY,force-remote-dns
 DOMAIN-KEYWORD,google,PROXY,force-remote-dns
 DOMAIN-KEYWORD,gstatic,PROXY,force-remote-dns
-DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
-
-
-DOMAIN,youtubei.googleapis.com,PROXY,force-remote-dns
-
-USER-AGENT,BBCiPlayer*,PROXY
 
 DOMAIN-KEYWORD,bbcfmt,PROXY,force-remote-dns
 DOMAIN-KEYWORD,uk-live,PROXY,force-remote-dns
