--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -434,18 +434,30 @@ HOST-KEYWORD,gmail,PROXY,resolve-on-proxy
 HOST-KEYWORD,google,PROXY,resolve-on-proxy
 HOST-KEYWORD,gstatic,PROXY,resolve-on-proxy
 
-HOST-KEYWORD,youtube,策略,resolve-on-proxy
+// Spotify
+USER-AGENT,*Spotify*,策略,resolve-on-proxy
+DOMAIN-KEYWORD,spotify,策略,resolve-on-proxy
+DOMAIN-SUFFIX,scdn.co,策略,resolve-on-proxy
+DOMAIN-SUFFIX,spoti.fi,策略,resolve-on-proxy
+// BBC
+USER-AGENT,BBCiPlayer*,策略,resolve-on-proxy
+DOMAIN-KEYWORD,bbcfmt,策略,resolve-on-proxy
+DOMAIN-KEYWORD,co.uk,策略,resolve-on-proxy
+DOMAIN-KEYWORD,uk-live,策略,resolve-on-proxy
+DOMAIN-SUFFIX,bbc.co,策略,resolve-on-proxy
+DOMAIN-SUFFIX,bbc.co.uk,策略,resolve-on-proxy
+DOMAIN-SUFFIX,bbc.com,策略,resolve-on-proxy
+DOMAIN-SUFFIX,bbci.co,策略,resolve-on-proxy
+DOMAIN-SUFFIX,bbci.co.uk,策略,resolve-on-proxy
+
+// Youtube
 USER-AGENT,*youtube*,策略,resolve-on-proxy
 USER-AGENT,YouTube*,策略,resolve-on-proxy
-HOST-SUFFIX,googlevideo.com,策略,resolve-on-proxyy
-HOST,youtubei.googleapis.com,策略,resolve-on-proxy
-USER-AGENT,BBCiPlayer*,策略,resolve-on-proxy
-HOST-SUFFIX,gvt2.com,策略,resolve-on-proxy
+DOMAIN-KEYWORD,youtube,策略,resolve-on-proxy
+DOMAIN-SUFFIX,googlevideo.com,策略,resolve-on-proxy
+DOMAIN-SUFFIX,gvt2.com,策略,resolve-on-proxy
+DOMAIN-SUFFIX,youtu.be,策略,resolve-on-proxy
 
-HOST-SUFFIX,bbc.co.uk,PROXY,resolve-on-proxy
-HOST-SUFFIX,bbci.co.uk,PROXY,resolve-on-proxy
-HOST-KEYWORD,bbcfmt,PROXY,resolve-on-proxy
-HOST-KEYWORD,uk-live,PROXY,resolve-on-proxy
 HOST-SUFFIX,appspot.com,PROXY,resolve-on-proxy
 HOST-SUFFIX,blogger.com,PROXY,resolve-on-proxy
 HOST-SUFFIX,getoutline.org,PROXY,resolve-on-proxy
